[package]
name = "crab-seagull-veal"
version = "0.1.0"
edition = "2021"

[lib]
name = "crab"
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
fixed = "1.27.0"
serde = { version = "1.0.200", features = ["derive"] }

[profile.release]
debug = true
