[package]
name = "crab-seagull-veal"
version = "0.1.0"
edition = "2021"

[lib]
name = "crab"
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
rust_decimal = { version = "1.35.0", features = ["serde-str"] }
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.200", features = ["derive"] }

[profile.release]
debug = true
